Consolidate looped get-user and get-workspace calls