@@ -6,7 +6,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 import org.pmiops.workbench.db.model.DbStorageEnums;
 import org.pmiops.workbench.db.model.DbUser;
 import org.pmiops.workbench.db.model.DbWorkspace;
@@ -26,15 +25,15 @@ public interface WorkspaceDao extends CrudRepository<DbWorkspace, Long>, Workspa
 
   Logger log = Logger.getLogger(WorkspaceDao.class.getName());
 
-  default DbWorkspace get(String ns, String firecloudName) {
-    return findByWorkspaceNamespaceAndFirecloudNameAndActiveStatus(
-        ns,
-        firecloudName,
-        DbStorageEnums.workspaceActiveStatusToStorage(WorkspaceActiveStatus.ACTIVE));
-  }
+  DbWorkspace findByWorkspaceNamespaceAndFirecloudNameAndActiveStatus(
+      String workspaceNamespace, String firecloudName, short activeStatus);
 
   default DbWorkspace getRequired(String ns, String firecloudName) {
-    DbWorkspace workspace = get(ns, firecloudName);
+    DbWorkspace workspace =
+        findByWorkspaceNamespaceAndFirecloudNameAndActiveStatus(
+            ns,
+            firecloudName,
+            DbStorageEnums.workspaceActiveStatusToStorage(WorkspaceActiveStatus.ACTIVE));
     if (workspace == null) {
       throw new NotFoundException(String.format("DbWorkspace %s/%s not found.", ns, firecloudName));
     }
@@ -59,13 +58,12 @@ public interface WorkspaceDao extends CrudRepository<DbWorkspace, Long>, Workspa
         DbStorageEnums.workspaceActiveStatusToStorage(WorkspaceActiveStatus.ACTIVE));
   }
 
+  List<DbWorkspace> getByWorkspaceNamespaceIn(Collection<String> workspaceNamespaces);
+
   default Optional<DbWorkspace> getByGoogleProject(String googleProject) {
     return findFirstByGoogleProjectAndActiveStatusOrderByLastModifiedTimeDesc(
         googleProject, DbStorageEnums.workspaceActiveStatusToStorage(WorkspaceActiveStatus.ACTIVE));
   }
-
-  DbWorkspace findByWorkspaceNamespaceAndFirecloudNameAndActiveStatus(
-      String workspaceNamespace, String firecloudName, short activeStatus);
 
   @Query(
       "SELECT w FROM DbWorkspace w LEFT JOIN FETCH w.cohorts c LEFT JOIN FETCH c.cohortReviews"
@@ -79,9 +77,7 @@ public interface WorkspaceDao extends CrudRepository<DbWorkspace, Long>, Workspa
   List<DbWorkspace> findAllByFirecloudUuidIn(Collection<String> firecloudUuids);
 
   default List<DbWorkspace> findActiveByFirecloudUuidIn(Collection<String> firecloudUuids) {
-    return findAllByFirecloudUuidIn(firecloudUuids).stream()
-        .filter(DbWorkspace::isActive)
-        .collect(Collectors.toList());
+    return findAllByFirecloudUuidIn(firecloudUuids).stream().filter(DbWorkspace::isActive).toList();
   }
 
   List<DbWorkspace> findAllByWorkspaceIdIn(Collection<Long> dbIds);
@@ -89,11 +85,7 @@ public interface WorkspaceDao extends CrudRepository<DbWorkspace, Long>, Workspa
   List<DbWorkspace> findAllByGoogleProjectIn(Collection<String> googleProjects);
 
   default Optional<DbWorkspace> findActiveByWorkspaceId(long workspaceId) {
-    DbWorkspace workspace = findById(workspaceId).orElse(null);
-    if (workspace == null || !workspace.isActive()) {
-      return Optional.empty();
-    }
-    return Optional.of(workspace);
+    return findById(workspaceId).filter(DbWorkspace::isActive);
   }
 
   List<DbWorkspace> findAllByWorkspaceNamespace(String workspaceNamespace);
@@ -106,8 +98,6 @@ public interface WorkspaceDao extends CrudRepository<DbWorkspace, Long>, Workspa
 
   Optional<DbWorkspace> findFirstByGoogleProjectAndActiveStatusOrderByLastModifiedTimeDesc(
       String googleProject, short activeStatus);
-
-  DbWorkspace findDbWorkspaceByWorkspaceId(long workspaceId);
 
   Set<DbWorkspace> findAllByCreator(DbUser user);
 
@@ -153,11 +143,4 @@ public interface WorkspaceDao extends CrudRepository<DbWorkspace, Long>, Workspa
           + "FROM DbWorkspace w "
           + "WHERE w.creator.userId in (:creatoridList)")
   Set<String> getGoogleProjectForUserList(@Param("creatoridList") List<Long> creatorIdList);
-
-  List<DbWorkspace> getAllByActiveStatusEquals(short status);
-
-  default List<DbWorkspace> getAllActive() {
-    return getAllByActiveStatusEquals(
-        DbStorageEnums.workspaceActiveStatusToStorage(WorkspaceActiveStatus.ACTIVE));
-  }
 }
